--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,9 @@
 html {
     height: 100%;
     background-color:#15909f;
+    background-image: linear-gradient(45 deg, #22b797, #15909f);
+    margin: auto;
+    padding: 0;
 
 }
 
@@ -9,38 +12,93 @@ body {
     display: grid;
     grid-template-rows: 1fr auto;
     border: 1px solid #ccc;
-    margin: 30px;
-    padding: 0;
-    font-family: 'Poppins', sans-serif;
+    border-radius: 2px;
+    margin: 40px;
+    max-width: 100%;
+    font-family: 'Spectral', serif;
     font-size: 14px;
     line-height: 20px;
     color: #333;
-    background-color:#ccc;
+    background-color: #ECF0E8;
+}
 
+h1, h2, h3, h4, h5 {
+    font-family: 'Poppins', sans-serif;
 }
 
 a {
     margin-top: 0px;
     margin-bottom: 20px;
     color: #15909f;
-    font-size: 17px;
+    font-size: 14px;
+    font-family: 'Poppins', sans-serif;
+}
+
+nav a {
+    padding: 7px 7px 7px 7px;
+    border: 1px solid #15909f;
+    border-radius: 3px;
+    text-decoration: none;
+}
+
+nav a:hover {
+    text-decoration: underline;
 }
 footer {
     grid-row-start: 2;
     grid-row-end: 3;
-    background-color: blue;
-    color: white;
-    
+    color: #15909f;
+    font-family: 'Poppins', sans-serif;
+    text-align: center;
+    padding-top: 50px;
+    height: 70px;
 }
 
+header {
+    text-align: center;
+    padding: 50px;
+}
+
+main {
+    padding: 50px;
+    margin: 0;
+    background-color: #F1F4EE;
+    max-width: 90vw;
+}
+nav {
+    text-align: center;
+
+}
 nav > ul li {
     list-style-type: none;
     display: inline;
+    text-align: center;
+    margin: 5px 5px 5px 5px;
 }
 
+h1 {
+    font-size: 60px;
+    line-height: 60px;
+}
 h2 {
     margin-top: 0px;
     margin-bottom: 20px;
     color: #15909f;
     font-size: 17px;
+}
+
+p {
+    font-size: 14px;
+    line-height: inherit;
+    margin: auto;
+}
+
+
+/* Section styles */
+#sect1, #sect2, #sect3, #sect4 {
+    background-image: linear-gradient(45deg, #22b797, #15909f);
+    width: 70vw;
+    margin: auto;
+    margin-top: 105px;
+    
 }
