--- a/css/main.css
+++ b/css/main.css
@@ -33,7 +33,7 @@ a {
     font-size: 14px;
     font-family: 'Poppins', sans-serif;
 }
-
+/* NAVIGATION STYLES */
 nav a {
     padding: 7px 7px 7px 7px;
     border: 1px solid #15909f;
@@ -44,6 +44,18 @@ nav a {
 nav a:hover {
     text-decoration: underline;
 }
+
+nav {
+    text-align: center;
+    padding-bottom: 100px;
+}
+nav > ul li {
+    list-style-type: none;
+    display: inline;
+    text-align: center;
+    margin: 5px 5px 5px 5px;
+}
+
 footer {
     grid-row-start: 2;
     grid-row-end: 3;
@@ -57,6 +69,12 @@ footer {
 header {
     text-align: center;
     padding: 50px;
+    /* parallax style */
+    width: 100%;
+    background: url("../img/ego-onload-v2.png") no-repeat;
+    height: 80px;
+    position: fixed;
+    margin-top:30px;
 }
 
 main {
@@ -65,16 +83,7 @@ main {
     background-color: #F1F4EE;
     max-width: 90vw;
 }
-nav {
-    text-align: center;
 
-}
-nav > ul li {
-    list-style-type: none;
-    display: inline;
-    text-align: center;
-    margin: 5px 5px 5px 5px;
-}
 
 h1 {
     font-size: 60px;
@@ -95,10 +104,56 @@ p {
 
 
 /* Section styles */
-#sect1, #sect2, #sect3, #sect4 {
+#sect1, #sect2 {
+    width: 100%; 
+}
+#sect1 {
     background-image: linear-gradient(45deg, #22b797, #15909f);
-    width: 70vw;
-    margin: auto;
+    /* background:url('../img/slide1.jpg') 50% 0 no-repeat fixed; */
     margin-top: 105px;
-    
+    color: #fff;
+    height: 600px;
+    margin: 0;
+    padding: 200px 0 260px 0;
+    background-size: cover;
+}
+#sect2 {
+    background-color: #fff;
+    color: #333333;
+    height: 300px;
+    margin: 0 auto;
+    overflow: hidden;
+    padding: 200px 0;
+}
+#sect3 {
+    background: url(../img/slide3.jpg) 50% 0 no-repeat fixed;
+    color: #fff;
+    height: 600px;
+    padding: 170px 0 0 0;
+    background-size: cover;
+}
+#sect4 {
+    background-color: #fff;
+    color: #333333;
+    height: 300px;
+    padding: 200px 0;
+}
+#sect5 {
+    background: url(../img/slide5.jpg) 50% 0 no-repeat fixed;
+    height: 200px;
+    margin: 0 auto;
+    padding: 250px 0;
+    color: #fff;
+    background-size: cover;
+}
+/* Parallax Styles */
+.center { 
+    margin: 0 auto; 
+}
+.content { 
+    margin: 0 auto; 
+    width: 960px; 
+}
+.clear { 
+    clear: both;
 }
