--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,12 @@
+*, *:before, *:after {
+    box-sizing: border-box;
+}
 html {
     height: 100%;
     background-color:#15909f;
     background-image: linear-gradient(45 deg, #22b797, #15909f);
     margin: auto;
     padding: 0;
-
 }
 
 body {
@@ -84,6 +86,33 @@ nav ul.navbar-menu {
     width: 80%;
     margin: 0 auto;
     clear: both;
+}
+
+#logo {
+    text-transform: uppercase;
+    float: left;
+    font-weight: 800;
+    font-size: 20px;
+}
+
+nav button {
+    background: none;
+    width: 30px;
+    height: 40px;
+    margin-top: 20px;
+    border: none;
+    display: inline-block;
+    cursor: pointer;
+    display: none;
+}
+
+nav button span {
+    width: 30px;
+    height: 40px;
+    height: 2px;
+    background: #333;
+    display: block;
+    margin: 5px 0;
 }
 
 footer {
@@ -182,3 +211,15 @@ p {
 .clear { 
     clear: both;
 }
+
+
+/* Media Queries */
+@media (max-width: 768px) {
+    nav ul.navbar-menu {
+      display: none;
+    }
+  
+    nav button {
+      display: block;
+    }
+  }
