--- a/css/main.css
+++ b/css/main.css
@@ -211,21 +211,44 @@ p {
 
 /* Media Queries*/
 @media (max-width: 825px) {
+    nav {
+        height: 0;
+    }
     nav ul.navbar-menu {
       display: flex;
       flex-direction: column;
     }
-  
-    nav {
-        display: inline-block;
-        text-align: center;
-        line-height: 100px;
-        padding: 50px;
-        background-color: black;
-        height: 100vh;
+    nav.scrollUp {
+        transform: translateY(-800px);
     }
     nav li a {
         border: none;
         font-size: 20px;
+        background-color: #fff;
+    }
+    nav li a:hover {
+        width: 100%;
+        margin: 0;
+        background-color: #fff;
+        color: #22b797;
+        border-radius: 0;
+    }    
+    nav li {
+        border-bottom: 1px solid #15909f;
+        font-size: 20px;
+        white-space: nowrap;
+        width: 100%
+    }
+    nav li:last-child {
+        border-bottom: none;
+    }
+    .navbar-menu li{
+        margin: 0;
+    }
+    .nav-container {
+        background-color: #fff;
+        min-width: 300px;
+        width: 100%;
+        padding-left: 80px; 
     }
   } 
