--- a/css/main.css
+++ b/css/main.css
@@ -19,7 +19,7 @@ body {
     grid-template-rows: 1fr auto;
     border: 1px solid #ccc;
     border-radius: 2px;
-    margin: 40px;
+    margin: 20px 40px 40px 40px;
     max-width: 100%;
     font-family: 'Spectral', serif;
     font-size: 14px;
@@ -32,11 +32,14 @@ h1, h2, h3, h4, h5 {
     font-family: 'Poppins', sans-serif;
 }
 
-footer  h4{
+footer h4, p{
     font-family: "Spectral", serif;
     font-weight: 400;
 }
-
+footer p {
+    color:#15909f;
+    font-size: 1em;
+}
 a {
     margin-top: 0px;
     margin-bottom: 20px;
@@ -93,11 +96,12 @@ nav.scrollUp {
 }
 .nav-container .icon {
     position: absolute;
-    top: 0px;
-    right: 30px;
+    top: -10px;
+    right: 20px;
     height: 28px;
     margin: 0;
     padding: 16px;
+    font-size: 25px;
     display: none;
 }
 
@@ -127,7 +131,8 @@ header {
 .intro  {
     margin: auto;
     max-width: 70vw;
-    border: 1px solid pink;
+    height: 80vh;
+    padding: 18px 20px;
 }
 
 h1 {
@@ -229,10 +234,17 @@ p {
         color: #333333;
         text-align: left;
     }
+
+    .intro {
+        max-width: 100vw;
+    }
     /* navigation styles */
     nav a {
-        color: #333;
+        color: #000;
+        font-weight: strong;
+        font-size: 1.75em;
     }
+
     nav {
         height: 0;
     }
@@ -240,8 +252,9 @@ p {
         transform: translateY(-800px);
     }
     .nav-container {
-        width: 100vw;
-        margin-top: 50px;
+        width: 100%;
+        background-color: #15909f;
+        box-shadow: 1px rgba(0,0,0,0.2)
     }
     .nav-container a:not(:last-child){
         display:none;
@@ -249,6 +262,11 @@ p {
     
     .nav-container a.icon {
         display: block;
+        cursor: pointer;
+        background-color: pink;
+        height: 80px;
+        border-radius: 3px;
+        color:#15909f;
     }
 
     .nav-container a {
@@ -259,10 +277,35 @@ p {
       float: none;
       display: block;
       text-align: center;
-      background-color: #15909f;
     }
 
-   footer {
-        text-align: none;
+    /* Animated Menu Icon */
+    /* w3schools.com */
+    .menuIcon{
+        display: inline-block;
+        cursor: pointer;
     }
+
+    .bar1, .bar2, .bar3 {
+        width: 35px;
+        height: 5px;
+        background-color: #333;
+        margin: 6px 0;
+        transition: 0.4s;
+    }
+    .change .bar1 {
+        -webkit-transform: rotate(-45deg) translate(-9px, 6px) ;
+        transform: rotate(-45deg) translate(-9px, 6px) ;
+    }
+    
+    .change .bar2 {
+        opacity: 0;
+    }
+    
+    .change .bar3 {
+        -webkit-transform: rotate(45deg) translate(-8px, -8px) ;
+        transform: rotate(45deg) translate(-8px, -8px) ;
+    }  
+
+
 }
