--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,6 @@ body {
     padding: 50px;
     display: grid;
     grid-template-rows: 1fr auto;
-    border: 1px solid #ccc;
     border-radius: 2px;
     margin: 20px 40px 40px 40px;
     max-width: 100%;
@@ -131,11 +130,10 @@ header {
 }
 
 .intro  {
-    margin: auto;
-    max-width: 70vw;
-    height: 80vh;
-    padding: 18px 20px;
-
+    max-width: 65vw;
+    margin: 200px auto;
+    padding: 18px 60px 40px 60px;
+    background-color: #fff;
 }
 
 h1 {
@@ -151,7 +149,7 @@ h2 {
 }
 
 p {
-    font-size: 2em;
+    font-size: 1.5em;
     line-height: 1.5em;
     margin: auto;
     color: #333333;
