--- a/css/main.css
+++ b/css/main.css
@@ -23,15 +23,18 @@ body {
     font-family: 'Spectral', serif;
     font-size: 14px;
     line-height: 20px;
-    color: #333;
+    color: #011227;
     background-color: #fff;
-    background:url('../img/jannaeeAndMiles-workLife-sm.jpg') 50% 0 no-repeat fixed;
+    background: url("../img/WorkLife-Hero.png") 50% 0 no-repeat fixed;
 
 }
 
 h1, h2, h3, h4, h5 {
     font-family: 'Poppins', sans-serif;
 }
+
+/* .container {
+} */
 
 footer h4, p{
     font-family: "Spectral", serif;
@@ -123,14 +126,13 @@ footer {
 }
 
 header {
-    height: 300px;
+    min-height: 15vh;
     margin: 0 0 135px 0;
     text-align: center;
 
 }
 
 .intro  {
-    max-width: 65vw;
     margin: 200px auto;
     padding: 18px 60px 40px 60px;
     background-color: #fff;
@@ -144,63 +146,52 @@ h1 {
 h2 {
     margin-top: 0px;
     margin-bottom: 20px;
-    color: #15909f;
-    font-size: 17px;
+    color:  #011227;
+    font-size: 2em;
 }
 
 p {
     font-size: 1.5em;
     line-height: 1.5em;
     margin: auto;
-    color: #333333;
+    color: #011227;
 }
 
 /* Section styles */
-#sect1, #sect2 {
-    width: 100%; 
-}
-#sect1 {
-    margin-top: 105px;
-    height: 600px;
-    margin: 0;
-    padding: 200px 0 260px 0;
-    background-size: cover;
-    border: 1px solid pink;
+#sect3, #sect4, #sect5 {
+    padding: 200px 60px 60px 60px;
+    background-color: #fff;
+    
 }
 
+#sect1 {/* Sections for blank space */
+    height: 200px;
+}
+#sect6 {/* Sections for blank space */
+    height: 600px;
+}
 #sect2 {
+    padding: 0px 60px 0 60px;
     background-color: #fff;
-    height: 300px;
+    height: auto;
     margin: 0 auto;
     overflow: hidden;
-    padding: 200px 0;
-    border: 1px solid pink;
 }
 
 #sect3 {
-    /* background: url(../img/slide3.jpg) 50% 0 no-repeat fixed; */
-    height: 600px;
-    padding: 170px 0 0 0;
+    height: auto;
     background-size: cover;
-    border: 1px solid pink;
 }
 
 #sect4 {
     background-color: #fff;
-    height: 300px;
-    padding: 200px 0;
-    border: 1px solid pink;
-    
+    height: auto;
 }
 
 #sect5 {
-    /* background: url(../img/slide5.jpg) 50% 0 no-repeat fixed; */
-    height: 200px;
-    margin: 0 auto;
-    padding: 250px 0;
-    background-size: cover;
-    border: 1px solid pink;
+    height: auto;
 }
+
 
 /* Parallax Styles */
 .center { 
@@ -219,28 +210,37 @@ p {
 /* Media Queries*/
 @media (max-width: 825px) {
     /* body styles */
+    
     body {
         margin: 10px;
     }
     h1 {
-        font-size: 3rem;
-        line-height: 1em;
-        white-space: nowrap;
+        font-size: 2rem;
+        line-height: 1.5em;
+        text-align: left;
+        color: #011227;
+        
     }
     p {
-        font-size: 1.5em;
+        font-size: 1.25em;
         line-height: 2em;
         margin: auto;
-        color: #333333;
+        color: #011227;
         text-align: left;
     }
 
+    .intro > p{
+        color: #011227;
+    }
     .intro {
-        max-width: 100vw;
+        max-width: 100%;
+        margin: 0px;
+        padding: 23px 44px 0 40px;
+        background-color: #fff;   
     }
     /* navigation styles */
     nav a {
-        color: #000;
+        color: #011227;
         font-weight: strong;
         font-size: 1.75em;
     }
@@ -263,7 +263,7 @@ p {
     .nav-container a.icon {
         display: block;
         cursor: pointer;
-        background-color: pink;
+        background-color: #44ABE4;
         height: 80px;
         border-radius: 3px;
         color:#15909f;
@@ -289,7 +289,7 @@ p {
     .bar1, .bar2, .bar3 {
         width: 35px;
         height: 5px;
-        background-color: #333;
+        background-color: #011227;
         margin: 6px 0;
         transition: 0.4s;
     }
@@ -306,6 +306,18 @@ p {
         -webkit-transform: rotate(45deg) translate(-8px, -8px) ;
         transform: rotate(45deg) translate(-8px, -8px) ;
     }  
+}
 
-
+@media (max-width: 400px) {
+    body {
+        padding: 0;
+        margin: 0'
+    }
+    header {
+        text-align: left;
+        width: 90vw;
+    }
+    .intro {
+        max-width: 100%;
+    }
 }
