refactor: Preparing files for first launch

--- a/css/main.css
+++ b/css/main.css
@@ -44,14 +44,14 @@ footer h4, p{
     font-weight: 400;
 }
 footer p {
-    color:#15909f;
+    color:#ffffff;
     font-size: 1em;
 }
 a {
     margin-top: 0px;
     margin-bottom: 20px;
     color: #15909f;
-    font-size: 14px;
+    font-size: 20px;
     font-family: 'Poppins', sans-serif;
 }
 
